--- a/rhexromero HTML.html
+++ b/rhexromero HTML.html
@@ -20,7 +20,7 @@
     }
 </style>
 <body> 
-    <img src="img/RHEX.jpg"  alt="" height="200">
+    <img src="iRHEX.jpg"  alt="" height="200">
         <h1>RHEX GEL ROMERO</h1>
         <p><em>Student at <a href="https://isu.ph/">Isabela State University</a></em>
         
